<resources>
    <string name="app_name">Projekt ArDetect</string>
    <string name="calibCamera">Kalibrace Kamry</string>
    <string name="action_settings">Tools</string>
    <string name="record_button">Record</string>

    <string name="title_activity_fullscreen">DetectionActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="detekce">Detekce</string>
    <string name="create_marker">Vytvoření markeru</string>
    <string name="technicalQuest">Technický úkon</string>
    <string name="nazevAkce">Název akce</string>
    <string name="descAction">Popisek Akce</string>
    <string name="startAction">Začít úkon</string>
    <string name="login">Login: Nog0030</string>
    <string name="created">Vytvořil: Petr Noga</string>
</resources>
